[package]
name = "cache_cat"
version = "0.1.0"
edition = "2024"
description = "An extremely high-performance strongly consistent key value pair database"
documentation = "https://github.com/nasuiyile/cache-cat"
readme = "README.md"
homepage = "https://github.com/nasuiyile/cache-cat"
repository = "https://github.com/nasuiyile/cache-cat"
license = "Apache-2.0"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true



[dependencies]
#openraft = { version = "0.9.21", features = ["type-alias"] }
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13", features = ["type-alias", "serde"] }
#openraft-multi = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13" }
futures = "0.3.32"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["net", "io-util", "fs", "rt", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
bincode2 = "2.0.1"
bytes = "1.11.1"
#moka = { version = "0.12.15", features = ["sync"] }
async-trait = "0.1.89"
mimalloc = "0.1.50"
crossbeam-utils = "0.8.21"
parking_lot = "0.12.5"
raft-engine = { git = "https://github.com/nasuiyile/raft-engine-serde" }

tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

#遥测相关默认不启用
console-subscriber = { version = "0.5", optional = true }
tracing-flame = { version = "0.2", optional = true }
toml = "0.8.23"
thiserror = "1.0.69"
ordered-float = { version = "5.3.0", features = ["serde"] }
mlua = { version = "0.11.6", features = ["lua51", "vendored", "send"] }
lru = "0.18.0"
sha1 = "0.11.0"
flurry = "0.5.2"
crossbeam-channel = "0.5.15"
[dev-dependencies]
anyhow = "1.0.102"
tempfile = "3.27.0"


[features]
default = []
tokio-console = ["dep:console-subscriber"]
flamegraph = ["dep:tracing-flame"]